--- a/product-service/package.json
+++ b/product-service/package.json
@@ -4,6 +4,9 @@
   "description": "The Product Service creates the API Gateway and Lambda functions",
   "scripts": {
     "test": "jest",
+    "lint": "eslint .",
+    "lint-fix": "eslint --fix .",
+    "format": "prettier --write .",
     "package-build": "sls package",
     "deploy:dev": "sls deploy --stage dev",
     "deploy:prod": "sls deploy --stage prod",
@@ -15,7 +18,12 @@
     "@types/jest": "^29.5.12",
     "@types/node": "^10.17.56",
     "@types/serverless": "^1.78.23",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-es6": "^1.0.0",
+    "eslint-plugin-prettier": "^5.1.3",
     "jest": "^29.7.0",
+    "prettier": "^3.2.5",
     "serverless-webpack": "^5.4.0",
     "terser-webpack-plugin": "^5.3.10",
     "ts-jest": "^29.1.2",
@@ -35,6 +43,10 @@
     },
     "testEnvironment": "node",
     "testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.(ts|tsx|js)$",
-    "moduleFileExtensions": ["ts", "tsx", "js"]
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js"
+    ]
   }
 }
