Integrate ProductService with PostgreSQL RDS including createProductHandler

--- a/product-service/package.json
+++ b/product-service/package.json
@@ -8,9 +8,9 @@
     "lint-fix": "eslint --fix .",
     "format": "prettier --write .",
     "package-build": "sls package",
-    "deploy:populate-tables": "ts-node src/services/dynamoDB-memory-product-service.ts",
-    "deploy:dev": "sls deploy --stage dev && npm run deploy:populate-tables",
-    "deploy:prod": "sls deploy --stage prod && npm run deploy:populate-tables",
+    "deploy:populate-tables": "ts-node src/services/postgres-memory-product-service.ts",
+    "deploy:dev": "sls deploy --stage dev",
+    "deploy:prod": "sls deploy --stage prod",
     "remove:dev-stack": "sls remove --stage dev --region us-east-1",
     "remove:prod-stack": "sls remove --stage prod --region us-east-1"
   },
@@ -18,7 +18,9 @@
     "@types/aws-lambda": "^8.10.73",
     "@types/jest": "^29.5.12",
     "@types/node": "^10.17.56",
+    "@types/pg": "^8.11.4",
     "@types/serverless": "^1.78.23",
+    "@types/uuid": "^9.0.8",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-es6": "^1.0.0",
