--- a/product-service/serverless.yml
+++ b/product-service/serverless.yml
@@ -10,6 +10,11 @@ provider:
   environment:
     ENV_STAGE: ${opt:stage, 'dev'}
     CONNECTION_STR: ''
+  iamRoleStatements:
+    - Effect: Allow
+      Action:
+        - sqs:SendMessage
+      Resource: '*'
 
 plugins:
   - serverless-webpack
@@ -18,6 +23,34 @@ custom:
   webpack:
     webpackConfig: 'webpack.config.js'
     includeModules: true
+
+resources:
+  Resources:
+    CatalogItemsQueue:
+      Type: AWS::SQS::Queue
+      Properties:
+        QueueName: catalogItemsQueue
+    CreateProductTopic:
+      Type: AWS::SNS::Topic
+      Properties:
+        DisplayName: Create Product Topic
+        TopicName: createProductTopic
+
+    ProductEmailSubscription:
+      Type: AWS::SNS::Subscription
+      Properties:
+        Protocol: email
+        TopicArn: !Ref CreateProductTopic
+        Endpoint: mariia_zaiets@epam.com
+
+    FilteredProductEmailSubscription:
+      Type: AWS::SNS::Subscription
+      Properties:
+        Protocol: email
+        TopicArn: !Ref CreateProductTopic
+        Endpoint: mariiazaiets09@gmail.com
+        FilterPolicy:
+          price: [100, 200]
 
 functions:
   getProductsList:
@@ -34,6 +67,7 @@ functions:
         - subnet-0b3f5462358873117
         - subnet-0dade5e03fa7f3ee8
         - subnet-02f8d70e6ce1c02e6
+
   getProductById:
     handler: handler.getProductById
     events:
@@ -52,6 +86,7 @@ functions:
         - subnet-0b3f5462358873117
         - subnet-0dade5e03fa7f3ee8
         - subnet-02f8d70e6ce1c02e6
+
   createProduct:
     handler: handler.createProduct
     events:
@@ -66,3 +101,16 @@ functions:
         - subnet-0b3f5462358873117
         - subnet-0dade5e03fa7f3ee8
         - subnet-02f8d70e6ce1c02e6
+
+  catalogBatchProcess:
+    handler: handler.catalogBatchProcess
+    environment:
+      CONNECTION_STR: ''
+      SNS_TOPIC_ARN: !Ref CreateProductTopic
+    events:
+      - sqs:
+          arn:
+            Fn::GetAtt:
+              - CatalogItemsQueue
+              - Arn
+          batchSize: 5
